--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "@antv/g6": "^3.4.9",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.1.4",
     "lint-staged": "^10.0.7",
